--- a/README
+++ b/README
@@ -11,4 +11,4 @@
 - The importance of test coverage
 
 
-(Introduction To Testing In JavaScript with Jest)[https://www.youtube.com/watch?v=FgnxcUQ5vho&t=2s]
+[Introduction To Testing In JavaScript with Jest](https://www.youtube.com/watch?v=FgnxcUQ5vho&t=2s)
